--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "scDiffCom"]
+	path = scDiffCom
+	url = https://github.com/cyrillagger/scdiffcom
+	shallow = true
+	registered = true
